# Food-Crawling

./: .gitignore  .samignore  Dockerfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  clean-stacks.sh  deploy.sh  entrypoint.sh  event.json  pyproject.toml  refactoring_requirements.md  requirements.txt  samconfig.toml  serverless.yml  template.yaml  template.yml
.aws-sam/: build.toml
.github/workflows/: input.yml  main.yml  simple-print.yml  test.yml
data/: dodam_20221107~20230501.csv  dodam_20221107~20230501.xlsx  dormitory_20200102~20230501.csv  dormitory_20200102~20230501.xlsx  error.html  return.json  school_cafeteria.csv  school_cafeteria.xlsx  school_cafeteria_20230501.csv
functions/common/: constant.py  exceptions.py  logging_config.py  menu_example.py  model.py  models.py  utils.py
functions/config/: dependencies.py  settings.py
functions/lambda_handlers/: handler_support.py  notify_failure.py
functions/schedule/: schedule_dodam.py  schedule_dormitory.py  schedule_faculty.py  schedule_haksik.py
functions/scrapping/: get_dodam.py  get_dormitory.py  get_faculty.py  get_haksik.py
functions/shared/: observability.py
python/: Object.py  api-notification.py  constant.py  cron.py  main.py  oopisveryhardtome.py  paper.py  parse.py  pastdata.py  pastdata_dormitory.py  practice.py  requirements.txt  test.py  treating_db.py  using_ai.py  workingwithtable.ipynb
python-requirements-layer/: requirements.txt
scripts/: make_layers.ps1
statemachine/: dormitory-retry-workflow.asl.json
tests/: conftest.py  test_client_observability.py  test_clients.py  test_dependencies.py  test_exception_sanitization.py  test_get_dodam.py  test_get_dormitory.py  test_get_haksik.py  test_lambda_handlers.py  test_model.py  test_notify_failure.py  test_observability.py  test_schedule_dodam.py  test_schedule_dormitory.py  test_scheduling_outcomes.py  test_scrapers.py  test_scraping_views.py  test_services.py  test_slack_client.py  test_source_classification.py  test_state_machine_contract.py  test_template_contract.py  test_time_slot_strategy.py  test_utils.py
tests/e2e/: test_full_scraping_flow.py
tests/integration/: test_scheduling_service_integration.py  test_scraping_service_integration.py
(+42 files in other folders)
