[tool.poetry]
name = "food-crawling"
version = "0.1.0"
description = ""
authors = ["rover0811 <rover0811@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.47.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
aiohttp = "^3.10.5"
tenacity = "^9.0.0"
pytz = "^2024.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
